Publish personal portfolio page

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 
     <!-- Edit meta tags for SEO -->
     <title>DeveloperFolio | Developer Portfolio Template</title>
-    <meta name="title" content="DeveloperFolio | Developer Portfolio Template">
+    <meta name="title" content="Personal page">
     <meta name="description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
 
     <!-- Open Graph / Facebook -->
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
     <!-- Link to a hosted image -->
     <!-- <meta property="og:image" content=""> -->
-    
+
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://developerfolio.js.org/">
@@ -54,7 +54,7 @@
     </script>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/FortAwesome/Font-Awesome@5.15.4/css/all.min.css">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simple-icons-font@v9/font/simple-icons.min.css" type="text/css">
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -80,4 +80,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  
 </html>
