Add telegram og tag

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,9 @@
     />
     <!-- Link to a hosted image -->
     <!-- <meta property="og:image" content=""> -->
-
+    <!-- Telegram tags -->
+    <html prefix="og: http://ogp.me/ns#">
+    
     <meta name="msapplication-TileColor" content="#603cba" />
     <meta name="theme-color" content="#6c63ff" />
 
