Add og:image preview

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
       content="Портфолио достижений, навыков и опыта в качестве программного инженера"
     />
     <!-- Link to a hosted image -->
-    <!-- <meta property="og:image" content=""> -->
+    <meta property="og:image" content="https://github.com/toadharvard/toadharvard.github.io/assets/88928096/0bcf8384-ab56-428e-8113-327af1a7a709" />
     <!-- Telegram tags -->
     <html prefix="og: http://ogp.me/ns#">
     
